syntax = "proto3";

option go_package = "./raft";

package raft;

// Interface exported by the server.
service RaftService {
   rpc GetStatus(StatusRequest) returns (StatusResult) {}
   rpc RequestVotes(RequestVotesRequest) returns (RequestVotesResult) {}
   rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResult) {} 
   rpc HeartBeat(HeartBeatRequest) returns (HeartBeatResult) {} 
   rpc SendVote(SendVoteRequest) returns (SendVoteResult) {}
   rpc CommitLog(CommitLogRequest) returns (CommitLogResult) {}
   rpc AppendEntriesStream(stream AppendEntriesRequest) returns (stream AppendEntriesResult) {}
   // rpc UncommitEntry(UncommitEntry) returns (UncommitEntryResult) {} 
}

message StatusRequest {}

message StatusResult {
   bytes status = 1;
}
  
message RequestVotesRequest {
   uint64 term = 1;
   uint64 index = 2;
   uint64 id = 3;
}

message RequestVotesResult {
}

message AppendEntriesRequest {
   uint64 term = 1;
   uint64 index = 2;
   bytes  type = 3;
   bytes  data = 4;
}

message AppendEntriesResult {
   bool applied = 1;
   uint64 index = 2;
}

message HeartBeatRequest {
}
 
message HeartBeatResult {
}

message SendVoteRequest {
   bool voted = 1;
   uint64 id  =2;
}
 
message SendVoteResult {
}

message CommitLogRequest {
   uint64 index = 1;
}
 
message CommitLogResult {
   bool applied = 1;
}